--- a/views/sort/bubblesort.ejs
+++ b/views/sort/bubblesort.ejs
@@ -4,29 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Run Length DECODE</title>
+  <title>SORT</title>
 </head>
 <body>
   <div>
-    <p>
-      contoh input: <b>a2b2c1d1</b>
-      <br>
-      contoh output: <b>aabbcd</b>
-    </p>
-    <p>
-      contoh input: <b>w3b3f2</b>
-      <br>
-      contoh output: <b>wwwbbbff</b>
-    </p>
+    <p>Sorting array integer metode <b>"Bubble Sort"</b></p>
+    <img src="/public/images/Bubble-sort.gif" alt="">
+    <br>
+    <br>
     
     <%- include('../flashmessage'); -%>
+    <br>
     
     <form action="" method="post">
-      <input type="text" name="str" placeholder="masukkan input">
+      <input type="text" name="str" placeholder="input array" value="[6,4,2,1,3,5]">
       <button type="submit">Apply</button>
     </form>
     
-    <br>
     <br>
     <br>
     <% if (result.length) { %>
