--- a/views/sort/bubblesort.ejs
+++ b/views/sort/bubblesort.ejs
@@ -5,29 +5,35 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SORT</title>
+  
+  <%- include('../partials/css'); -%>
 </head>
 <body>
-  <div>
-    <p>Sorting array integer metode <b>"Bubble Sort"</b></p>
-    <img src="/public/images/Bubble-sort.gif" alt="">
-    <br>
-    <br>
-    
-    <%- include('../flashmessage'); -%>
-    <br>
-    
-    <form action="" method="post">
-      <input type="text" name="str" placeholder="input array" value="[6,4,2,1,3,5]">
-      <button type="submit">Apply</button>
-    </form>
-    
-    <br>
-    <br>
-    <% if (result.length) { %>
-      <p>Hasil : <%= result %></p>
-    <% } %>
+  <div class="container">
+    <div class="header">
+      <a class="button" href="/"> < Back to Home</a>
+      <br>
+      <br>
+      <p style="margin-bottom: 0;">Sorting array integer metode <b>"Bubble Sort"</b></p>
+      <img src="/public/images/Bubble-sort.gif" alt="">
+      <br>
+      <p style="margin: 0;">
+        Merupakan algoritma pengurutan paling tua dengan metode pengurutan paling sederhana. 
+        Pengurutan yang dilakukan dengan membandingkan masing-masing item dalam suatu list secara berpasangan, 
+        menukar item jika diperlukan, dan mengulanginya sampai akhir list secara berurutan, 
+        sehingga tidak ada lagi item yang dapat ditukar.
+      </p>
+      <br>
+      <%- include('../flashmessage'); -%>
+      <form action="" method="post">
+        <input type="text" name="str" placeholder="input array" value="[6,4,2,1,3,5]">
+        <button class="button-primary" type="submit">Apply</button>
+      </form>
       
-    
+      <% if (result.length) { %>
+        <pre>Hasil : <%= result %></pre>
+      <% } %>
+    </div>
   </div>
 </body>
 </html>
