--- a/views/first/main2.ejs
+++ b/views/first/main2.ejs
@@ -5,35 +5,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Run Length DECODE</title>
+  
+  <%- include('../partials/css'); -%>
 </head>
 <body>
-  <div>
-    <p>
-      contoh input: <b>a2b2c1d1</b>
+  <div class="container">
+    <div class="header">
+      <a class="button" href="/"> < Back to Home</a>
       <br>
-      contoh output: <b>aabbcd</b>
-    </p>
-    <p>
-      contoh input: <b>w3b3f2</b>
+      <pre class="code-example">
+        contoh input: a2b2c1d1
+        contoh output: aabbcd
+        
+        contoh input: w3b3f2
+        contoh output: wwwbbbff
+      </pre>
       <br>
-      contoh output: <b>wwwbbbff</b>
-    </p>
-    
-    <%- include('../flashmessage'); -%>
-    
-    <form action="" method="post">
-      <input type="text" name="str" placeholder="masukkan input">
-      <button type="submit">Apply</button>
-    </form>
-    
-    <br>
-    <br>
-    <br>
-    <% if (result.length) { %>
-      <p>Hasil : <%= result %></p>
-    <% } %>
+      <%- include('../flashmessage'); -%>
+      <form action="" method="post">
+        <input type="text" name="str" placeholder="masukkan input">
+        <button class="button-primary" type="submit">Apply</button>
+      </form>
       
-    
+      <% if (result.length) { %>
+        <pre>Hasil : <%= result %></pre>
+      <% } %>
+    </div>
   </div>
 </body>
 </html>
