--- a/views/sort/mergesort.ejs
+++ b/views/sort/mergesort.ejs
@@ -5,29 +5,38 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SORT</title>
+  <%- include('../partials/css'); -%>
 </head>
 <body>
-  <div>
-    <p>Sorting array integer metode <b>"Merge Sort"</b></p>
-    <img src="/public/images/Merge-sort.gif" alt="">
-    <br>
-    <br>
-    
-    <%- include('../flashmessage'); -%>
-    <br>
-    
-    <form action="" method="post">
-      <input type="text" name="str" placeholder="input array" value="[6,4,2,1,3,5]">
-      <button type="submit">Apply</button>
-    </form>
-    
-    <br>
-    <br>
-    <% if (result.length) { %>
-      <p>Hasil : <%= result %></p>
-    <% } %>
+  <div class="container">
+    <div class="header">
+      <a class="button" href="/"> < Back to Home</a>
+      <br>
+      <br>
+      <p style="margin-bottom: 0;">Sorting array integer metode <b>"Merge Sort"</b></p>
+      <img src="/public/images/Merge-sort.gif" alt="">
+      <br>
+      <div style="margin-top: 0;">
+        Algoritma dirumuskan dalam 3 langkah berpola divide-and-conquer. Berikut menjelaskan langkah kerja dari Merge sort.<br>
+        - Divide : Memilah elemen – elemen dari rangkaian data menjadi dua bagian.<br>
+        - Conquer : Conquer setiap bagian dengan memanggil prosedur merge sort secara rekursif<br>
+        - Kombinasi : Mengkombinasikan dua bagian tersebut secara rekursif untuk mendapatkan rangkaian data berurutan<br>
+        <br>
+        Proses rekursi berhenti jika mencapai elemen dasar. 
+        Hal ini terjadi bilamana bagian yang akan diurutkan menyisakan tepat satu elemen.<br>
+        Sisa pengurutan satu elemen tersebut menandakan bahwa bagian tersebut telah terurut sesuai rangkaian.
+      </div>
+      <br>
+      <%- include('../flashmessage'); -%>
+      <form action="" method="post">
+        <input type="text" name="str" placeholder="input array" value="[6,4,2,1,3,5]">
+        <button class="button-primary" type="submit">Apply</button>
+      </form>
       
-    
+      <% if (result.length) { %>
+        <pre>Hasil : <%= result %></pre>
+      <% } %>
+    </div>
   </div>
 </body>
 </html>
