adding smallest numbers

--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -62,6 +62,9 @@
         <div class="three columns center">
           <a class="button" href="/eventproblem">Event</a>
         </div>
+        <div class="three columns center">
+          <a class="button" href="/smallestnumber">Smallest Number</a>
+        </div>
       </div>
       
       
