--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -59,14 +59,21 @@
         <div class="three columns center">
           <a class="button" href="/runlen-decode">Decode</a>
         </div>
+      </div>
+      
+      <br>
+      <p style="margin-bottom: 10px;">RUN LENGTH</p>
+      <div class="row">
         <div class="three columns center">
           <a class="button" href="/eventproblem">Event</a>
         </div>
         <div class="three columns center">
           <a class="button" href="/smallestnumber">Smallest Number</a>
         </div>
+        <div class="three columns center">
+          <a class="button" href="/binary-gap">Binary Gap</a>
+        </div>
       </div>
-      
       
       
       
