--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -73,6 +73,9 @@
         <div class="three columns center">
           <a class="button" href="/binary-gap">Binary Gap</a>
         </div>
+        <div class="three columns center">
+          <a class="button" href="/str-split">Str Split</a>
+        </div>
       </div>
       
       
