--- a/views/second/stringsplit.ejs
+++ b/views/second/stringsplit.ejs
@@ -18,11 +18,13 @@
         contoh: 
         input kalimat: "hallo gaes wawan disini"
         input N = 13
-        
         - "hallo gaes wa" (salah, karena tidak ada kata "wa" ditiap-tiap kata)
         - "hallo gaes " (salah, karena mengandung spasi di akhir kalimat )
-        
         output yang benar adalah "hallo gaes"
+
+        input kalimat: "hallo gaes wawan disini"
+        input N = 100
+        output yang benar adalah "hallo gaes wawan disini"
       </pre>
       <br>
       <%- include('../flashmessage'); -%>
