--- a/views/second/stringsplit.ejs
+++ b/views/second/stringsplit.ejs
@@ -30,7 +30,7 @@
       <%- include('../flashmessage'); -%>
       <form action="" method="post">
         <input type="text" name="str" placeholder="input kalimat" value="hallo gaes wawan disini">
-        <input type="number" name="angka" placeholder="input N" value="13">
+        N = <input type="number" name="angka" placeholder="input N" value="13">
         <button class="button-primary" type="submit">Apply</button>
       </form>
       
