--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -62,7 +62,7 @@
       </div>
       
       <br>
-      <p style="margin-bottom: 10px;">RUN LENGTH</p>
+      <p style="margin-bottom: 10px;">KASUS</p>
       <div class="row">
         <div class="three columns center">
           <a class="button" href="/eventproblem">Event</a>
@@ -75,6 +75,11 @@
         </div>
         <div class="three columns center">
           <a class="button" href="/str-split">Str Split</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="three columns center">
+          <a class="button" href="/bioskop-case">Bioskop</a>
         </div>
       </div>
       
