--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -81,6 +81,9 @@
         <div class="three columns center">
           <a class="button" href="/bioskop-case">Bioskop</a>
         </div>
+        <div class="three columns center">
+          <a class="button" href="/polusi-case">Polusi</a>
+        </div>
       </div>
       
       
