--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -84,6 +84,9 @@
         <div class="three columns center">
           <a class="button" href="/polusi-case">Polusi</a>
         </div>
+        <div class="three columns center">
+          <a class="button" href="/sum-in-array">Sum in array</a>
+        </div>
       </div>
       
       
